# BlueXVC

./: .gitmodules  CMakeLists.txt  README.md  main.c
Controller/: stm32f1xx_hal_conf.h  stm32f1xx_it.c
hw_layer/: hw_clk.c  hw_clk.h  hw_gpio.c  hw_gpio.h  hw_init.c  hw_init.h  hw_iodef.h  hw_irq.c  hw_irq.h
